--- a/style.css
+++ b/style.css
@@ -408,91 +408,90 @@ section {
 } */
 
 .contact__section {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 50px;
-    width: 100%;
-    height: auto;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+  width: 100%;
+  height: auto;
 }
 .contact__section h2 {
-    font-size: 50px;
-    text-align: center;
-
+  font-size: 50px;
+  text-align: center;
 }
 
 .form__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 50%;
-    border-radius: 30px;
-    border: rgb(247, 68, 172) 2px solid;
-    margin-left: 25% !important;
-    padding-top: 50px;
-    box-shadow: 6px 6px 10px rgb(241, 104, 184);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+  border-radius: 30px;
+  border: rgb(247, 68, 172) 2px solid;
+  margin-left: 25% !important;
+  padding-top: 50px;
+  box-shadow: 6px 6px 10px rgb(241, 104, 184);
 }
 
 .form__container form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 #email {
-    padding: 10px 20px;
-    width: 210px;
-    border-radius: 5px;
-    border: none;
-    border: rgb(247, 68, 172) 2px solid;
-    outline-style: solid;
-    outline-width: 1px;
-    font-size: 1rem;
+  padding: 10px 20px;
+  width: 210px;
+  border-radius: 5px;
+  border: none;
+  border: rgb(247, 68, 172) 2px solid;
+  outline-style: solid;
+  outline-width: 1px;
+  font-size: 1rem;
 }
-.form__container input, .form__container textarea {
-    margin-bottom: 10px;
-    background-color: transparent;
+.form__container input,
+.form__container textarea {
+  margin-bottom: 10px;
+  background-color: transparent;
 }
 
 #text {
-    border-radius: 5px;
-    width: 200px !important;
-    border: rgb(241, 104, 184) 2px solid;
-    padding-left: 15px;
-    /* outline-style: solid;
+  border-radius: 5px;
+  width: 200px !important;
+  border: rgb(241, 104, 184) 2px solid;
+  padding-left: 15px;
+  /* outline-style: solid;
     outline-width: 1px; */
 }
 
 .button__sumbit {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    background-color: rgb(198, 9, 119);
-    padding: 10px 40px;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-bottom: 45px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  background-color: rgb(198, 9, 119);
+  padding: 10px 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-bottom: 45px;
 }
 
 /* FOOTER */
 
-footer{
+footer {
   align-items: center;
   justify-content: center;
 }
 
-.footer-footer{
+.footer-footer {
   padding-top: 10px;
 }
 
 footer p {
-    color: rgb(13, 16, 37);
-    text-align: center;
-    font-size: 1rem;
-    margin-top: 50px;
+  color: rgb(13, 16, 37);
+  text-align: center;
+  font-size: 1rem;
+  margin-top: 50px;
 }
-
 
 /* MEDIA QUERIES */
 
@@ -521,7 +520,7 @@ footer p {
   .Container1 {
     margin-top: 2rem;
   }
-  .card1{
+  .card1 {
     width: fit-content;
     height: 50px;
   }
@@ -561,8 +560,8 @@ footer p {
     background-color: rgb(13, 16, 37);
     text-align: center;
     transition: 0.3s;
-}
-  
+  }
+
   #projects {
     height: fit-content;
   }
@@ -582,7 +581,7 @@ footer p {
   article {
     font-size: 1rem;
   }
-  footer{
+  footer {
     height: fit-content;
     margin-bottom: 2rem;
   }
@@ -598,13 +597,13 @@ footer p {
   .nav-links li a {
     font-size: 1rem;
   }
-  .about-pic{
+  .about-pic {
     margin: 0px;
     width: 300px;
     height: auto;
     align-items: center;
   }
-  .about__pic-container{
+  .about__pic-container {
     flex-direction: column;
     justify-content: center;
   }
@@ -638,51 +637,48 @@ footer p {
     height: auto;
     align-items: center;
   }
-  .Container1{
+  .Container1 {
     display: flex;
     flex-direction: column;
     align-items: center !important;
   }
-  .skill__container{
+  .skill__container {
     width: 100%;
     height: 50%;
     margin: 20px 0;
   }
-.form__container{
-  margin: 0px 20px !important;
-  align-items: center;
-  padding-top: 50px;
-  justify-content: center;
-  width: auto;
-}
-.form__container form{
-  width: 100%;
-}
-.contact__section {
+  .form__container {
+    margin: 0px 20px !important;
+    align-items: center;
+    padding-top: 50px;
+    justify-content: center;
+    width: auto;
+  }
+  .form__container form {
+    width: 100%;
+  }
+  .contact__section {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto auto;
     padding: 0;
-}
-.about__info {
+  }
+  .about__info {
     flex-direction: column;
     align-items: center;
     margin-bottom: 10px;
-}
+  }
 
-.about__info-name {
+  .about__info-name {
     text-align: center;
-}
+  }
 
-.no2{
-  align-items: center;
-  margin-left: 40px;
-}
-.abt-btn{
-  margin-left: 120px;
-}
-
-
-
+  .no2 {
+    align-items: center;
+    margin-left: 40px;
+  }
+  .abt-btn {
+    margin-left: 110px;
+  }
 }
