--- a/style.css
+++ b/style.css
@@ -415,8 +415,9 @@ img {
   .home__img {
     width: 300px;
     position: relative;
-    height: 50vw;
+    height: 80vw;
     display: flex;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     margin-bottom: 0px;
